--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="preload" as="image" href="/assets/bg/bgArtPoster.png" />
+    <link rel="preload" as="image" href="%PUBLIC_URL%/assets/bg/bgArtPoster.png" />
     <link
       rel="preload"
       as="video"
-      href="/assets/bg/bgArt.mp4"
+      href="%PUBLIC_URL%/assets/bg/bgArt.mp4"
       type="video/mp4"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
