--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
       content="Web site created using create-react-app"
     />
     <link rel="preload" as="image" href="%PUBLIC_URL%/assets/bg/bgArtPoster.png" />
-      rel="preload"
+    <link  
+    rel="preload"
       as="video"
       href="%PUBLIC_URL%/assets/bg/bgArt.mp4"
       type="video/mp4"
